--- a/src/Main.scss
+++ b/src/Main.scss
@@ -4,12 +4,12 @@
 
 header {
   display: flex;
-}
-
-header > div {
-  font-size: 3em;
-  margin: 0.67em auto;
-  color: #555;
+  
+  > div {
+    font-size: 3em;
+    margin: 0.67em auto;
+    color: #555;
+  }
 }
 
 .title {
