--- a/src/Main.scss
+++ b/src/Main.scss
@@ -16,3 +16,9 @@ header {
   font-size: 1.5em;
   margin: 0.5em;
 }
+
+@media (prefers-color-scheme: dark) {
+  header > div {
+    color: #bbb;
+  }
+}
