--- a/src/index.scss
+++ b/src/index.scss
@@ -6,3 +6,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+@media (prefers-color-scheme: dark) {
+  body {  
+    background-color: #222;
+    color: white;
+  }
+}
