--- a/src/main/main.scss
+++ b/src/main/main.scss
@@ -1,4 +1,5 @@
 #page-content {
+  height: 100vh;
   padding: 5px 50px;
 }
 
@@ -17,7 +18,12 @@ header {
   margin: 0.5em;
 }
 
-@media (prefers-color-scheme: dark) {
+.dark {
+  &#page-content {  
+    background-color: #222;
+    color: white;
+  }
+  
   header > div {
     color: #bbb;
   }
