--- a/src/projects/project-item.scss
+++ b/src/projects/project-item.scss
@@ -26,6 +26,7 @@
   
   > .row {
     display: flex;
+    align-items: center;
     min-height: 50px;
     border: 5px solid;
     border-color: var(--project-item-border-color);
@@ -33,7 +34,7 @@
     transition: border-radius 0.4s ease-in-out;
     
     .app-link {
-      margin: auto 0 auto 10px;
+      margin-left: 10px;
       font-size: 1.2em;
       color: var(--project-item-link-color);
 
@@ -47,10 +48,14 @@
     }
     
     .repo-link {
-      margin: 6px 10px 5px 10px;
+      margin: 0 10px;
       
-      img {
-        height: 40px;
+      > picture {
+        display: flex;
+
+        > img {
+          height: 40px;
+        }
       }
     }
     
@@ -89,9 +94,8 @@
       border-radius: 8px;
 
       .expander::after {
-        margin-top: 18px;
-        transform: rotate(45deg);
-        -webkit-transform: rotate(45deg);
+        transform: translateY(-4px) rotate(45deg);
+        -webkit-transform: translateY(-4px) rotate(45deg);
       }
     }
 
@@ -106,8 +110,8 @@
 
       .expander::after {
         margin-top: 22px;
-        transform: rotate(-135deg);
-        -webkit-transform: rotate(-135deg);
+        transform: translateY(-8px) rotate(-135deg);
+        -webkit-transform: translateY(-8px) rotate(-135deg);
       }
     }
 
