--- a/src/index.scss
+++ b/src/index.scss
@@ -6,3 +6,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+a.external-link:after {
+  content: "\00a0\00a0\00a0\00a0\00a0";
+  display: inline-block;
+  margin-left: 0.2em;
+  text-decoration: none;
+  background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 35 35' transform='translate(0 4)'%3E%3Cpath d='M17 13.5v6H5v-12h6m3-3h6v6m0-6-9 9' class='icon_svg-stroke' stroke='%23666' stroke-width='1.5' fill='none' fill-rule='evenodd' stroke-linecap='round' stroke-linejoin='round'%3E%3C/path%3E%3C/svg%3E");
+}
