--- a/src/projects/project-group.scss
+++ b/src/projects/project-group.scss
@@ -51,6 +51,7 @@
         border: solid;
         border-color: var(--group-item-expander-color);
         border-width: 0 3px 3px 0;
+        transition: transform 0.4s ease-in-out;
       }
     }
   }
@@ -73,9 +74,8 @@
 
   &.expanded {
     > .row .expander::after {
-      margin-top: 22px;
-      transform: translateY(-8px) rotate(-135deg);
-      -webkit-transform: translateY(-8px) rotate(-135deg);
+      transform: translateY(0) rotate(-135deg);
+      -webkit-transform: translateY(0) rotate(-135deg);
     }
 
     > .expandable-section {
