--- a/src/projects/project-item.scss
+++ b/src/projects/project-item.scss
@@ -77,6 +77,7 @@
         border: solid;
         border-color: var(--project-item-expander-color);
         border-width: 0 3px 3px 0;
+        transition: transform 0.4s ease-in-out;
       }
     }
   }
@@ -114,9 +115,8 @@
       border-radius: 8px 8px 0 0;
 
       .expander::after {
-        margin-top: 22px;
-        transform: translateY(-8px) rotate(-135deg);
-        -webkit-transform: translateY(-8px) rotate(-135deg);
+        transform: translateY(0) rotate(-135deg);
+        -webkit-transform: translateY(0) rotate(-135deg);
       }
     }
 
