--- a/src/app.css
+++ b/src/app.css
@@ -10,7 +10,13 @@ body {
 a.external-link:after {
   content: "\00a0\00a0\00a0\00a0\00a0";
   display: inline-block;
-  margin-left: 0.2em;
+  margin-left: 0.2rem;
   text-decoration: none;
   background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 35 35' transform='translate(0 4)'%3E%3Cpath d='M17 13.5v6H5v-12h6m3-3h6v6m0-6-9 9' class='icon_svg-stroke' stroke='%23666' stroke-width='1.5' fill='none' fill-rule='evenodd' stroke-linecap='round' stroke-linejoin='round'%3E%3C/path%3E%3C/svg%3E");
+}
+
+h1 {
+  margin: 0.67em auto !important;
+  font-weight: normal;
+  outline: none;
 }
