--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,13 @@
+#root {
+  --link-color: #555;
+  --visited-link-color: #888;
+}
+
+.dark #root {
+  --link-color: #bbb;
+  --visited-link-color: #888;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -15,8 +25,36 @@ a.external-link:after {
   background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 35 35' transform='translate(0 4)'%3E%3Cpath d='M17 13.5v6H5v-12h6m3-3h6v6m0-6-9 9' class='icon_svg-stroke' stroke='%23666' stroke-width='1.5' fill='none' fill-rule='evenodd' stroke-linecap='round' stroke-linejoin='round'%3E%3C/path%3E%3C/svg%3E");
 }
 
+#root {
+  display: flex;
+  flex-direction: column;
+}
+
 h1 {
   margin: 0.67em auto !important;
   font-weight: normal;
   outline: none;
+}
+
+.paragraph {
+  font-size: 1.2em;
+  margin: 0 auto 1em auto;
+}
+
+ul {
+  list-style-type: none;
+  padding-left: 0;
+
+  > li {
+    font-size: 1.2em;
+    margin-bottom: 20px;
+
+    a {
+      color: var(--link-color);
+
+      &:visited {
+        color: var(--visited-link-color);
+      }
+    }
+  }
 }
