Add skeleton loader animation to "Projects" and "Blog" pages

--- a/src/app.scss
+++ b/src/app.scss
@@ -36,7 +36,36 @@ h1 {
   outline: none;
 }
 
+.error {
+  font-size: 1.2em;
+  color: #ff4444;
+}
+
 .paragraph {
   font-size: 1.2em;
   margin: 0 auto 1em auto;
+}
+
+.skeleton {
+  margin: 0 !important;
+
+  > .line {
+    margin: 0 auto 10px auto;
+    max-width: 600px;
+    height: 40px;
+    border-radius: 5px;
+    background: -webkit-gradient(linear, left top, right top, color-stop(8%, rgba(130, 130, 130, 0.2)), color-stop(18%, rgba(130, 130, 130, 0.3)), color-stop(33%, rgba(130, 130, 130, 0.2)));
+    background: linear-gradient(to right, rgba(130, 130, 130, 0.2) 8%, rgba(130, 130, 130, 0.3) 18%, rgba(130, 130, 130, 0.2) 33%);
+    background-size: 800px 100px;
+    animation: wave-lines 2s infinite ease-out;
+  }
+}
+
+@keyframes wave-lines {
+    0% {
+        background-position: -468px 0;
+    }
+     100% {
+        background-position: 468px 0;
+    }
 }
