--- a/src/app.scss
+++ b/src/app.scss
@@ -49,11 +49,28 @@ h1 {
 .skeleton {
   margin: 0 !important;
 
+  &.skeleton-row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
   > .line {
     margin: 0 auto 10px auto;
     max-width: 600px;
     height: 40px;
     border-radius: 5px;
+    background: -webkit-gradient(linear, left top, right top, color-stop(8%, rgba(130, 130, 130, 0.2)), color-stop(18%, rgba(130, 130, 130, 0.3)), color-stop(33%, rgba(130, 130, 130, 0.2)));
+    background: linear-gradient(to right, rgba(130, 130, 130, 0.2) 8%, rgba(130, 130, 130, 0.3) 18%, rgba(130, 130, 130, 0.2) 33%);
+    background-size: 800px 100px;
+    animation: wave-lines 2s infinite ease-out;
+  }
+
+  > .bubble {
+    margin: 10px;
+    width: 60px;
+    height: 30px;
+    border-radius: 12px;
     background: -webkit-gradient(linear, left top, right top, color-stop(8%, rgba(130, 130, 130, 0.2)), color-stop(18%, rgba(130, 130, 130, 0.3)), color-stop(33%, rgba(130, 130, 130, 0.2)));
     background: linear-gradient(to right, rgba(130, 130, 130, 0.2) 8%, rgba(130, 130, 130, 0.3) 18%, rgba(130, 130, 130, 0.2) 33%);
     background-size: 800px 100px;
